--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-input-mask": "^2.0.4",
