--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.8.1",
+    "firebase": "^9.8.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.4.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-input-mask": "^2.0.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1",
-    "react-text-mask": "^5.4.3",
     "react-toastify": "^8.2.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
